--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,7 @@
 @use '../../../assets/variables.scss' as vars;
 
 .footer-wrapper {
+  position: relative;
     width: 100%;
     height: 80px;
     background-color: var(--p-surface-950);
